feat unit tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,12 +35,7 @@
     "types": [
     "@types/mocha", 
     "@types/node", 
-    "jest",
-    "@types/superagent",
-    "@types/selenium-webdriver",
-    "@wdio/globals/types",
-    "expect-webdriverio",
-    "@wdio/cucumber-framework"
+    "jest"
     ],  
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
