--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Type script course final project",
   "main": "index.js",
   "scripts": {
-    "unit:test": "jest --config='./unit/jest.config.js' --coverage"
+    "unit:test": "jest --config='./unit/jest.config.js' --coverage",
+    "api:test": "jest --config='./api/jest.config.js' --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,12 @@
     "@types/jest": "^29.5.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.2",
+    "@types/superagent": "^4.1.18",
     "chai": "^4.3.7",
     "jest": "^29.6.1",
     "mocha": "^10.2.0",
     "node-fetch": "^3.3.1",
+    "superagent": "^8.0.9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
