--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "unit:test": "jest --config='./unit/jest.config.js' --coverage",
-    "api:test": "jest --config='./api/jest.config.js' --coverage"
+    "api:test": "jest --config='./api/jest.config.js' --coverage",
+    "ui:test": "rm -rf ui/assets/allure-results && rm -rf ui/assets/allure-report && playwright test --config=./ui/config/playwright.config.ts",
+    "ui:allure:report": "allure generate ui/assets/allure-results --clean -o ui/assets/allure-report && allure open ui/assets/allure-report"
   },
   "repository": {
     "type": "git",
@@ -32,5 +34,10 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.36.1",
+    "allure-commandline": "^2.23.0",
+    "allure-playwright": "^2.4.0"
   }
 }
