--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,11 +36,7 @@
     "@types/mocha", 
     "@types/node", 
     "jest",
-    "@types/superagent",
-    "@types/selenium-webdriver",
-    "@wdio/globals/types",
-    "expect-webdriverio",
-    "@wdio/cucumber-framework"
+    "@types/superagent"
     ],  
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
